--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -98,6 +98,34 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2024-12-30">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2024-12-30-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/7cd21a68f48876d69af631acc5d9b754.webp" alt="12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2024-12-30-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、日本、新加坡、美国、香港、加拿大、韩国等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2024-12-29">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2024-12-29-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9be0540ae1583a31777e1cff7d530a33.webp" alt="12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2024-12-29-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">12月29日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、日本、新加坡、香港、韩国、加拿大、美国等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2024-12-28">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2024-12-28-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -192,16 +220,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-32626.htm" title="领养宠物需要什么手续（领养宠物需要收费吗）">领养宠物需要什么手续（领养宠物需要收费吗）</a></li>
-                        <li class="py-2"><a href="/news/article-33574.htm" title="Vue中引入静态资源的几种方式">Vue中引入静态资源的几种方式</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-6-node-share.htm" title="1月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-36436.htm" title="spring源码之Mybatis扫描器">spring源码之Mybatis扫描器</a></li>
-                        <li class="py-2"><a href="/news/article-36329.htm" title="养猫***大概需要多少钱一针疫苗（养猫咪要打什么针大概多少钱）">养猫***大概需要多少钱一针疫苗（养猫咪要打什么针大概多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-34043.htm" title="猫三联到底是两针还是三针啊图片（猫三联每针的作用）">猫三联到底是两针还是三针啊图片（猫三联每针的作用）</a></li>
+                        <li class="py-2"><a href="/news/article-30137.htm" title="学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）">学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）</a></li>
+                        <li class="py-2"><a href="/news/article-36328.htm" title="宠物领养网站论文绪论 宠物领养网站设计的需求调研">宠物领养网站论文绪论 宠物领养网站设计的需求调研</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-1-free-node-subscribe.htm" title="1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-12-23-node-share.htm" title="12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址">12月23日→22.9M/S|2024年最新免费节点V2rayU Node订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" title="12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-33097.htm" title="RMI反序列化学习">RMI反序列化学习</a></li>
+                        <li class="py-2"><a href="/news/article-35255.htm" title="狗粮批发厂家联系方式查询（狗粮厂家批发中心）">狗粮批发厂家联系方式查询（狗粮厂家批发中心）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-30-node-share-links.htm" title="12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/news/article-36437.htm" title="一片枫叶简笔画图片（一片枫叶图片唯美意境）">一片枫叶简笔画图片（一片枫叶图片唯美意境）</a></li>
+                        <li class="py-2"><a href="/news/article-30245.htm" title="宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片">宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片</a></li>
+                        <li class="py-2"><a href="/news/article-31163.htm" title="宠物粮怎么卖赚钱（做宠物粮生意赚钱吗）">宠物粮怎么卖赚钱（做宠物粮生意赚钱吗）</a></li>
+                        <li class="py-2"><a href="/news/article-36929.htm" title="领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎">领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎</a></li>
                     </ul>
     </div>
 </div>
@@ -213,7 +241,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
