--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -157,7 +157,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://ivoyec0.dg7.top/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" target="_blank"><b>狗狗加速</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" target="_blank"><b>狗狗加速</b></a>
                                 </div>
                                 <div class="panel-body">
                                     <p>?狗狗加速双11双12黑五优惠 ?</p><p>? 套餐优惠码（下单时输入）</p><p>月付/季付套餐 85折 ➡️ 优惠码 “2411”</p><p>半年付立减 20元 ➡️ 优惠码 “20”</p><p>年付立减 30元 ➡️ 优惠码 “30”</p><p>2年付立减 40元 ➡️ 优惠码 “40”</p><p><br></p><p>? 充值返现</p><p>充值超过100元，自动赠送10元：</p><p>充100得110，充200得220，以此类推（? 充值路径：左侧菜单-&gt;个人中心-&gt;充值 ，打开余额自动续费，支付无手续费）</p><p><br></p><p>⏰ 截止至 12月12日 24时 立即下单，锁定年度最低价！</p>
@@ -205,7 +205,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://ivoyec0.dg7.top/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -844,16 +844,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-31678.htm" title="linux搭建NFS网络文件共享服务">linux搭建NFS网络文件共享服务</a></li>
-                        <li class="py-2"><a href="/news/article-33097.htm" title="RMI反序列化学习">RMI反序列化学习</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-1-3-free-high-speed-nodes.htm" title="1月3日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">1月3日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-32149.htm" title="猫三联多少钱一针为什么有上千（猫三联一共几针多少钱）">猫三联多少钱一针为什么有上千（猫三联一共几针多少钱）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-30-node-share-links.htm" title="12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">12月30日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-5-free-node-subscribe-links.htm" title="1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-2-free-node-subscribe-links.htm" title="1月2日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址">1月2日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-30724.htm" title="动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）">动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）</a></li>
+                        <li class="py-2"><a href="/news/article-30245.htm" title="宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片">宠物粮食品牌前十排名榜单 宠物粮食品牌前十排名榜单图片</a></li>
+                        <li class="py-2"><a href="/news/article-31679.htm" title="记-Windows环境下Prometheus+alertmanager+windows_exporter+mtail监控部署提起网关日志">记-Windows环境下Prometheus+alertmanager+windows_exporter+mtail监控部署提起网关日志</a></li>
+                        <li class="py-2"><a href="/news/article-34044.htm" title="制作狗粮机器多少钱一套（自制狗粮机）">制作狗粮机器多少钱一套（自制狗粮机）</a></li>
                         <li class="py-2"><a href="/news/article-35797.htm" title="东北农业大学兽医院电话是多少（东北农业大学兽医院电话是多少号）">东北农业大学兽医院电话是多少（东北农业大学兽医院电话是多少号）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" title="12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-36928.htm" title="成都宠物领养平台领养可靠吗安全吗知乎文章（成都宠物领养平台领养可靠吗安全吗知乎文章）">成都宠物领养平台领养可靠吗安全吗知乎文章（成都宠物领养平台领养可靠吗安全吗知乎文章）</a></li>
+                        <li class="py-2"><a href="/news/article-32149.htm" title="猫三联多少钱一针为什么有上千（猫三联一共几针多少钱）">猫三联多少钱一针为什么有上千（猫三联一共几针多少钱）</a></li>
+                        <li class="py-2"><a href="/news/article-37894.htm" title="动物疫苗接种后多久产生抗体了正常（动物疫苗打几次）">动物疫苗接种后多久产生抗体了正常（动物疫苗打几次）</a></li>
+                        <li class="py-2"><a href="/news/article-36929.htm" title="领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎">领养宠物需要签协议吗合法吗 领养宠物需要签协议吗合法吗知乎</a></li>
+                        <li class="py-2"><a href="/news/article-32150.htm" title="八公家宠物酒店（八公家宠物酒店怎么样）">八公家宠物酒店（八公家宠物酒店怎么样）</a></li>
                     </ul>
     </div>
 </div>
@@ -865,7 +865,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
